# post_ranking

./: .gitignore  docker-compose-prod.yml  docker-compose.yml
artillery/: Dockerfile
embedding/: pyproject.toml  requests.http
embedding/src/: app.py
embedding/src/common/: extract_keywords.py  generate_embeddings.py
embedding/src/routes/: batch_size_test.py  embedding_and_keywords.py  stress_test.py
mediaTransformer/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
mediaTransformer/requests/: get.http  images-ocr.http  images.http  images_tagging_only.http  upload_key.http  videos.http
mediaTransformer/requests/videos/: archery.webm
mediaTransformer/src/: app.py
mediaTransformer/src/common/: admin.py  device.py  env.py  lerp.py  redis.py  response.py  upload_keys.py
mediaTransformer/src/minio/: client.py  common.py  get_variant.py  schema.py  variants.py
mediaTransformer/src/process_media/: common.py
mediaTransformer/src/process_media/image/: create_variant.py  image_options.py  upload.py
mediaTransformer/src/process_media/video/: upload.py  video_options.py
mediaTransformer/src/routes/: create_upload_key.py  get_file.py  home.py  signed_upload.py  upload.py
mediaTransformer/src/tagging/: clean_text.py  model.py  tag_image.py  tag_video.py
mediaTransformer/typings/debugpy/: __init__.pyi  public_api.pyi
mediaTransformer/typings/debugpy/_vendored/: __init__.pyi  _util.pyi  force_pydevd.pyi
mediaTransformer/typings/torchvision/: __init__.pyi  _internally_replaced_utils.pyi  _meta_registrations.pyi  extension.pyi  utils.pyi
(+627 files in other folders)
